Cypher Shell auto complete commands
- Refactor statement parsing. Move more of the parsing to the parser and 
  simplify APIs. Prepares for syntax highlighting and completion.
- Refactor commands. Split command executors from metadata to remove circular class dependency.
- Introduce autocompletion of commands.
- Make `:history clear` command case insensitive.